add all needed content and styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
         <a href="#">Only Cats</a>
         <a href="#">Only Rabbits</a>
     </div>
+
+    <div class="animals">
+        <!--duplicate me-->
+        <div class="animal-card">
+            <div class="animal-card-text">
+                <h3>Meowsalot</h3>
+                <small><span class="age">3 years old</span>-<span class="species">Cat</span></small>
+                <p class="description">Meowsalot is a talkative friend that loves to play and is great with children. He
+                    is looking for a forever home today!</p>
+                <a href="#" class="primary-btn">Adopt Meowsalot</a>
+            </div>
+            <div class="animal-card-photo">
+                <img src="https://learnwebcode.github.io/pet-adoption-data/photos/meowsalot.webp"
+                    alt="A cat named Meowsalot">
+            </div>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
