--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <div class="filter-div">
         <a href="#" data-filter="all">All Animals</a>
-        <a href="#" data-filter="dog">Only Dogs</a>
-        <a href="#" data-filter="cat">Only Cats</a>
-        <a href="#" data-filter="rabbit">Only Rabbits</a>
+        <a href="#" data-filter="Dog">Only Dogs</a>
+        <a href="#" data-filter="Cat">Only Cats</a>
+        <a href="#" data-filter="Rabbit">Only Rabbits</a>
     </div>
 
     <div class="animals">
@@ -29,7 +29,7 @@
         <div class="animal-card">
             <div class="animal-card-text">
                 <h3></h3>
-                <small><span class="age">3 years old</span> - <span class="species"></span></small>
+                <small><span class="age">3 years old</span> - <span class="species">cat</span></small>
                 <p class="description">Meowsalot is a talkative friend that loves to play and is great with children. He
                     is looking for a forever home today!</p>
                 <a href="#" class="primary-btn">Adopt Meowsalot</a>
