Documentation and readability enhancement

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="filter-div">
-        <a href="#" data-filter="all">All<span class="only-large-screen"> Animals</span></a>
+        <a href="#" data-filter="All">All<span class="only-large-screen"> Animals</span></a>
         <a href="#" data-filter="Dog"><span class="only-large-screen">Only </span>Dogs</a>
         <a href="#" data-filter="Cat"><span class="only-large-screen">Only </span>Cats</a>
         <a href="#" data-filter="Rabbit"><span class="only-large-screen">Only </span>Rabbits</a>
